<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bit-Puzzler</string>
    <string name="hello_world">hello, worlds</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="menu_settings">Settings</string>
    <string name="main_title">Bit-Puzzler</string>
    <string name="btn_start">Start</string>
    <string name="btn_scores">High Scores</string>
    <string name="btn_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_puzzle">Puzzle</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_puzz_selection">Select a Puzzle</string>
    <string name="btn_1">1: Puzzle Name Goes Here</string>
    <string name="btn_2">2: 2nd Level</string>
    <string name="btn_3">3: On your way</string>
    <string name="btn_4">4: Name Goes Here</string>
    <string name="btn_5">5: Halfway there!</string>
    <string name="btn_6">6: Another name</string>
    <string name="btn_7">7: Still another name</string>
    <string name="btn_8">8: Almost done</string>
    <string name="btn_9">9: The last puzzle</string>
    <string name="title_activity_high_scores">High Scores</string>
    <string name="test_data">Test data</string>
    <string name="title_activity_add_score">AddScore</string>
    <string name="btn_reset">Reset</string>

</resources>