<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PuzzSelection" >

    <Button
        android:id="@+id/b1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_1"
        android:onClick="b1Click" />
    <Button
        android:id="@+id/b2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_2"
        android:layout_below="@+id/b1"
        android:onClick="b2Click" />
    <Button
        android:id="@+id/b3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_3"
        android:layout_below="@+id/b2"
        android:onClick="b3Click" />
     <Button
        android:id="@+id/b4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_4"
        android:layout_below="@+id/b3"
        android:onClick="b4Click"/>
     <Button
        android:id="@+id/b5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_5"
    	android:layout_below="@+id/b4"
        android:onClick="b5Click" />
     <Button
        android:id="@+id/b6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_6"
    	android:layout_below="@+id/b5"
        android:onClick="b6Click" />
     <Button
        android:id="@+id/b7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_7"
        android:layout_below="@+id/b6"
        android:onClick="b7Click"/>
     <Button
        android:id="@+id/b8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_8"
        android:layout_below="@+id/b7"
        android:onClick="b8Click" />
     <Button
        android:id="@+id/b9"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_9"
        android:layout_below="@+id/b8"
        android:onClick="b9Click" />

</RelativeLayout>