<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:background="@drawable/back4"
    >

	

<!-- 	<ScrollView android:id="@+id/ScrollView01" -->
<!-- 	android:layout_width="wrap_content" android:layout_height="150dip"> -->
<!-- 		<TextView android:layout_width="fill_parent" -->
<!-- 		android:layout_height="wrap_content" -->
<!-- 		android:text="@string/main_title" -->
<!-- 	    android:textColor="#e62" -->
<!-- 	    android:textSize="70sp" -->
<!--         android:layout_gravity="center" -->
<!--         android:gravity="center" -->
<!-- 	    android:typeface="serif" -->
<!-- 	    android:textStyle="bold"> -->
<!-- 		</TextView> -->
<!-- 	</ScrollView> -->
<!-- 	    android:textColor="#143" -->
	<Button android:id="@+id/txtHeader"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/main_title"
		android:textColor="#3e1"
	    android:textSize="50sp"
	    android:layout_weight="1"
	    android:typeface="serif"
	    android:textStyle="bold"/>

    <Button android:id="@+id/btnStart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="openPuzzSelect"
        android:layout_weight="1"
        android:textColor="#bea"
        android:text="@string/btn_start"
        android:typeface="serif"
	    android:textStyle="bold"
	    android:textSize="30sp" />
     <Button android:id="@+id/btnScores"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="openScoresSelect"
        android:layout_weight="1"
        android:textColor="#bea"
        android:text="@string/btn_scores"
        android:typeface="serif"
	    android:textStyle="bold"
	    android:textSize="30sp" />
    <Button android:id="@+id/btnReset"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="resetPuzzles"
        android:layout_weight="1"
        android:textColor="#bea"
        android:text="@string/btn_reset"
        android:typeface="serif"
	    android:textStyle="bold"
	    android:textSize="30sp" />
<!--     <Button -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_weight="1" -->
<!--         android:text="@string/btn_settings" /> -->

</LinearLayout>
